ADDED: form header with cancel button

--- a/pages/addressbook_form.html
+++ b/pages/addressbook_form.html
@@ -20,5 +20,12 @@
             </div>
             </div>
         </header>
+        <div class="form-content">
+            <form class="form" action="#" onreset="resetForm()" onsubmit="save(event)" autocomplete="off">
+                <div class="form-head">
+                    <div class="form-head form-text">Person Address Form</div>
+                    <a href="./home.html" ><img src="../assets/cancel.png" class = "cancel-img"></a>
+                </div>
+            </form>    
     </body>
 </html>
