--- a/pages/addressbook_form.html
+++ b/pages/addressbook_form.html
@@ -26,6 +26,12 @@
                     <div class="form-head form-text">Person Address Form</div>
                     <a href="./home.html" ><img src="../assets/cancel.png" class = "cancel-img"></a>
                 </div>
+
+                <div class="row-content">
+                    <label class="label text" for="name">Full Name</label>
+                    <input class="input" type="text" id="name" name="name" required />
+                    <error-output class="name-error" for="name"></error-output>
+                </div>
             </form>    
     </body>
 </html>
