ADDED: input field for phone number

--- a/pages/addressbook_form.html
+++ b/pages/addressbook_form.html
@@ -32,6 +32,13 @@
                     <input class="input" type="text" id="name" name="name" required />
                     <error-output class="name-error" for="name"></error-output>
                 </div>
+
+                <div class="row-content">
+                    <label class="label text" for="phoneNumber">Phone Number</label>
+                    <input class="input" type="text" id="phoneNumber" name="phoneNumber" required/>
+                    <error-output class ="phoneNumber-error" for="phoneNumber"></error-output>
+                </div>
+
             </form>    
     </body>
 </html>
