ADDED: input field for address

--- a/pages/addressbook_form.html
+++ b/pages/addressbook_form.html
@@ -39,6 +39,12 @@
                     <error-output class ="phoneNumber-error" for="phoneNumber"></error-output>
                 </div>
 
+                <div class="row-content">
+                    <label class="label text" for="address">Address</label>
+                    <textarea class="input" id="address" name="address" style="height: 100px"></textarea>
+                    <error-output class="address-error" for="address"></error-output>
+                </div>
+
             </form>    
     </body>
 </html>
