ADDED: input field for city

--- a/pages/addressbook_form.html
+++ b/pages/addressbook_form.html
@@ -45,6 +45,21 @@
                     <error-output class="address-error" for="address"></error-output>
                 </div>
 
+                <div class="row-content select-elements">
+                    <div>
+                      <label class="label text " for="city">City</label>
+                      <select id="city" name="city">
+                        <option value="" class="text" disabled selected hidden>Select City</option>
+                        <option value="Bangalore">Bangalore</option>
+                        <option value="Mumbai">Mumbai</option>
+                        <option value="Bhopal">Bhopal</option>
+                        <option value="Chennai">Chennai</option>
+                        <option value="Lucknow">Lucknow</option>
+                        <option value="Hyderabad">Hyderabad</option>
+                      </select>
+                    </div>  
+                </div>
+
             </form>    
     </body>
 </html>
