ADDED: input field for state

--- a/pages/addressbook_form.html
+++ b/pages/addressbook_form.html
@@ -57,7 +57,19 @@
                         <option value="Lucknow">Lucknow</option>
                         <option value="Hyderabad">Hyderabad</option>
                       </select>
-                    </div>  
+                    </div>
+                    <div>
+                        <label class="label text " for="state">state</label>
+                        <select id="state" name="state">
+                          <option value="" class="text" disabled selected hidden>Select City</option>
+                          <option value="Karnataka">Karnataka</option>
+                          <option value="Maharashtra">Maharashtra</option>
+                          <option value="Madhya Pradesh">Madhya Pradesh</option>
+                          <option value="Tamil Nadu">Tamil Nadu</option>
+                          <option value="Uttar Pradesh">Uttar Pradesh</option>
+                          <option value="Telangana">Telangana</option>
+                        </select>
+                    </div>      
                 </div>
 
             </form>    
