--- a/pages/addressbook_form.html
+++ b/pages/addressbook_form.html
@@ -6,9 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="../css/adressbookform.css" />
+        <script defer src="../js/addressbook_form.js"></script>
+        <script defer src="../js/addressbook_data.js"></script>
         <title>Address Book Form</title>
     </head>
-    <body>
         
     <body>
         <header class="header-content header">
