ADDED: reset and add buttons to form

--- a/pages/addressbook_form.html
+++ b/pages/addressbook_form.html
@@ -85,6 +85,15 @@
                     </div>    
                 </div>
 
+                <div class="button-content">
+                    <div class="submit-reset">
+                      <button type="submit" class="button submitButton" id="submitButton" disabled >Add
+                      </button>
+                      <button type="reset" class="resetButton button " >Reset
+                      </button>
+                    </div>
+                </div>
+
             </form>    
     </body>
 </html>
