MODIFIED: onsubmit to return false

--- a/pages/addressbook_form.html
+++ b/pages/addressbook_form.html
@@ -22,7 +22,7 @@
             </div>
         </header>
         <div class="form-content">
-            <form class="form" action="#" onreset="resetForm()" onsubmit="save(event)" autocomplete="off">
+            <form class="form" action="#" onreset="resetForm()" onsubmit="save(event);return false" autocomplete="off">
                 <div class="form-head">
                     <div class="form-head form-text">Person Address Form</div>
                     <a href="./home.html" ><img src="../assets/cancel.png" class = "cancel-img"></a>
