REFACTORED: file ppath of images

--- a/pages/addressbook_form.html
+++ b/pages/addressbook_form.html
@@ -14,7 +14,7 @@
     <body>
         <header class="header-content header">
             <div class="logo-content">
-            <img src="../assets/logo.png" alt="" />
+            <img src="../assets/images/logo.png" alt="" />
             <div>
                 <span class="address-text">ADDRESS</span><br />
                 <span class="address-text book-text">BOOK</span>
@@ -25,7 +25,7 @@
             <form class="form" action="#" onreset="resetForm()" onsubmit="save(event);return false" autocomplete="off">
                 <div class="form-head">
                     <div class="form-head form-text">Person Address Form</div>
-                    <a href="./home.html" ><img src="../assets/cancel.png" class = "cancel-img"></a>
+                    <a href="./home.html" ><img src="../assets/images/cancel.png" class = "cancel-img"></a>
                 </div>
 
                 <div class="row-content">
