ADDED: content header that show person detail and add person button

--- a/pages/home.html
+++ b/pages/home.html
@@ -12,12 +12,24 @@
     <body>
         <header class="header-content header">
             <div class="logo-content">
-                <img src="../assets/logo.png" alt="">
+                <img src="../assets/images/logo.png" alt="">
                 <div>
                     <span class="address-text">ADDRESS</span><br>
                     <span class="address-text book-text">BOOK</span>
                 </div>
             </div>
         </header> 
+        <div class="main-content">
+            <div class="header-content">
+                <div class="address-detail-text">
+                    Person Details <div class="address-count">10</div>
+                </div>
+                <a href="addressbook_form.html" class="add-button" ><img src="../assets/icons/add-24px.svg" alt="">Add Person</a>
+            </div>
+        </div>
+        <script  src="../js/home.js"></script>
+        <script  src="../js/utility.js"></script>
+        <script  src="../js/site_properties.js"></script>
+        <script  src="../js/http_services.js" alt=""></script>
     </body>
 </html>    
