ADDED: path of site properties js file

--- a/pages/addressbook_form.html
+++ b/pages/addressbook_form.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="../css/addressbook_form.css" />
         <script defer src="../js/addressbook_form.js"></script>
         <script defer src="../js/contact.js"></script>
+        <script defer src="../js/site_properties.js"></script>
         <title>Address Book Form</title>
     </head>
         
