--- a/pages/addressbook_form.html
+++ b/pages/addressbook_form.html
@@ -10,6 +10,7 @@
         <script defer src="../js/contact.js"></script>
         <script defer src="../js/site_properties.js"></script>
         <script defer src="../js/utiity.js"></script>
+        <script defer src="../js/http_services.js"></script>
         <title>Address Book Form</title>
     </head>
         
